file.log
Processing d1_mini (platform: espressif8266; board: d1_mini; framework: arduino)
-----------------------------------------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif8266/d1_mini.html
PLATFORM: Espressif 8266 > WeMos D1 R2 & mini
HARDWARE: ESP8266 80MHz 80KB RAM (4MB Flash)
Library Dependency Finder -> http://bit.ly/configure-pio-ldf
LDF MODES: FINDER(chain) COMPATIBILITY(soft)
Collected 37 compatible libraries
Scanning dependencies...
Dependency Graph
|-- <CircularBuffer> 1.3.0
|-- <IRremoteESP8266> 2.5.4
|-- <domoServer>
|   |-- <CircularBuffer> 1.3.0
|   |-- <esp8266FTPServer>
|   |   |-- <ESP8266WiFi> 1.0
|   |-- <ArduinoJson> 5.13.4
|   |-- <Hash> 1.0
|   |-- <ESP8266WiFi> 1.0
|   |-- <TaskScheduler> 3.0.2
|   |-- <ESP_EEPROM> 2.0.0
|   |-- <WebSockets> 2.1.2
|   |   |-- <SPI> 1.0
|   |   |-- <ESP8266WiFi> 1.0
|   |   |-- <Hash> 1.0
|   |   |-- <Ethernet(esp8266)> 1.0.4
|   |   |   |-- <SPI> 1.0
|   |-- <ESP8266WebServer> 1.0
|   |   |-- <ESP8266WiFi> 1.0
|-- <TaskScheduler> 3.0.2
Compiling .pioenvs/d1_mini/lib671/domoServer/taskWifiScan.cpp.o
In file included from lib/domoServer/src/taskWifiScan.cpp:1:0:
lib/domoServer/src/taskWifiScan.h: In constructor 'taskWifiScan::taskWifiScan(long unsigned int, long int, Scheduler*, const char*, WebSocketsServer*)':
lib/domoServer/src/taskWifiScan.h:46:19: warning: 'taskWifiScan::m_WebSocketsServer' will be initialized after [-Wreorder]
WebSocketsServer* m_WebSocketsServer;
^
lib/domoServer/src/taskWifiScan.h:39:5: warning:   'int taskWifiScan::numScan' [-Wreorder]
int numScan;
^
lib/domoServer/src/taskWifiScan.cpp:77:1: warning:   when initialized here [-Wreorder]
taskWifiScan::taskWifiScan(unsigned long aInterval,long aIterations,Scheduler* aS, const char* name, WebSocketsServer* server) :
^
In file included from /home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/../Serialization/JsonSerializer.hpp:7:0,
from /home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/../Serialization/JsonPrintable.hpp:12,
from /home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/../JsonVariantBase.hpp:11,
from /home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/../JsonVariant.hpp:13,
from /home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/../JsonBuffer.hpp:12,
from /home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/JsonParser.hpp:7,
from /home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/JsonBufferBase.hpp:7,
from /home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/DynamicJsonBuffer.hpp:7,
from /home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson.hpp:9,
from /home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson.h:9,
from lib/domoServer/src/taskWifiScan.cpp:2:
/home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/../Serialization/JsonWriter.hpp: In instantiation of 'void ArduinoJson::Internals::JsonWriter<Print>::writeRaw(char) [with Print = char*]':
/home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/../Serialization/JsonWriter.hpp:43:17:   required from 'void ArduinoJson::Internals::JsonWriter<Print>::beginObject() [with Print = char*]'
/home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Serialization/JsonSerializerImpl.hpp:41:3:   required from 'static void ArduinoJson::Internals::JsonSerializer<Writer>::serialize(const ArduinoJson::JsonObject&, Writer&) [with Writer = ArduinoJson::Internals::JsonWriter<char*>]'
/home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/../Serialization/JsonPrintable.hpp:35:69:   required from 'typename ArduinoJson::Internals::EnableIf<(! ArduinoJson::Internals::StringTraits<TString>::has_append), unsigned int>::type ArduinoJson::Internals::JsonPrintable<T>::printTo(Print&) const [with Print = char*; T = ArduinoJson::JsonObject; typename ArduinoJson::Internals::EnableIf<(! ArduinoJson::Internals::StringTraits<TString>::has_append), unsigned int>::type = unsigned int]'
lib/domoServer/src/taskWifiScan.cpp:50:38:   required from here
/home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/../Serialization/JsonWriter.hpp:144:13: error: request for member 'print' in '((ArduinoJson::Internals::JsonWriter<char*>*)this)->ArduinoJson::Internals::JsonWriter<char*>::_sink', which is of non-class type 'char*'
_length += _sink.print(c);
^
/home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/../Serialization/JsonWriter.hpp: In instantiation of 'void ArduinoJson::Internals::JsonWriter<Print>::writeRaw(const char*) [with Print = char*]':
/home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/../Serialization/JsonWriter.hpp:62:22:   required from 'void ArduinoJson::Internals::JsonWriter<Print>::writeString(const char*) [with Print = char*]'
/home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Serialization/JsonSerializerImpl.hpp:45:5:   required from 'static void ArduinoJson::Internals::JsonSerializer<Writer>::serialize(const ArduinoJson::JsonObject&, Writer&) [with Writer = ArduinoJson::Internals::JsonWriter<char*>]'
/home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/../Serialization/JsonPrintable.hpp:35:69:   required from 'typename ArduinoJson::Internals::EnableIf<(! ArduinoJson::Internals::StringTraits<TString>::has_append), unsigned int>::type ArduinoJson::Internals::JsonPrintable<T>::printTo(Print&) const [with Print = char*; T = ArduinoJson::JsonObject; typename ArduinoJson::Internals::EnableIf<(! ArduinoJson::Internals::StringTraits<TString>::has_append), unsigned int>::type = unsigned int]'
lib/domoServer/src/taskWifiScan.cpp:50:38:   required from here
/home/nicolas/.platformio/lib/ArduinoJson_ID64/src/ArduinoJson/Deserialization/../Serialization/JsonWriter.hpp:141:13: error: request for member 'print' in '((ArduinoJson::Internals::JsonWriter<char*>*)this)->ArduinoJson::Internals::JsonWriter<char*>::_sink', which is of non-class type 'char*'
_length += _sink.print(s);
^
*** [.pioenvs/d1_mini/lib671/domoServer/taskWifiScan.cpp.o] Error 1
=========================================== [ERROR] Took 1.55 seconds ===========================================
